# group_logic

./: COOKBOOK.md  LICENSE  README.md  pyproject.toml
group_logic/: __init__.py  ops.py
logic_grp/: __init__.py  core.py
tests/: test_group_logic.py  test_logic_grp.py
