[build-system]
requires = ["setuptools>=68", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "group_logic"
version = "0.1.0"
authors = [
  { name = "Julian Klein" }
]
description = "Grouped logical operations on lists"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["logic", "boolean", "and", "or", "xor", "xnor", "grouped-logic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/morrdrix/group_logic"
Repository = "https://github.com/morrdrix/group_logic.git"
Issues = "https://github.com/morrdrix/group_logic/issues"
